/******************************************************************************
 *                                                                            *
 *                    Copyright 2018 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package net;
option java_package = "com.sandpolis.core.proto.net";

/**
 * Plugin metadata.
 */
message PluginDescriptor {
	string id = 1;
	string name = 2;
	string version = 3;
	string description = 4;
	string trust_authority = 5;
	bytes icon = 6;
	bool enabled = 7;
	int32 component_size_mega = 8;
	int32 component_size_micro = 9;
	int32 component_size_jfx = 10;
	int32 component_size_cli = 11;
}

/**
 * A request for a plugin list.
 */
message RQ_PluginList {
}

/**
 * A response to a plugin list request.
 */
message RS_PluginList {
	repeated PluginDescriptor plugin = 1;
}

/**
 * A request to initiate plugin synchronization.
 */
message RQ_PluginSync {
	repeated PluginDescriptor plugin = 1;
}

/**
 * The response to a plugin synchronization request.
 */
message RS_PluginSync {
	// The eligible plugin binaries
	repeated bytes plugin_binary = 1;
}

/**
 * A request to install a plugin on the server.
 */
message RQ_PluginInstall {

	oneof source {
		// The plugin binary
		bytes plugin_binary = 1;
		
		// The plugin's HTTP location
		string plugin_url = 2;
		
		// The plugin's maven central coordinates
		string plugin_coordinates = 3;
	}
}