/******************************************************************************
 *                                                                            *
 *                    Copyright 2017 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package soi;
option java_package = "com.sandpolis.core.soi";

/**
 * The SO_Build object contains information about the build process.
 */
message SO_Build {

	// The version string in a.b.c format.
	string version = 1;

	// The build number which uniquely identifies this build.
	int32 number = 2;
	
	// The build time
	int64 time = 3;
	
	// Whether this build is a debug or release build
	bool debug = 4;
	
	// The build platform's name
	string platform = 5;
	
	// The build platform's Java version
	string java_version = 6;
	
	// The build platform's Gradle version
	string gradle_version = 7;
}